# predictive-maintainance-arena

./: Dockerfile  README.md  __init__.py  demo_features.py  machines.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rubrics.py  train_colab.py
server/: app.py  environment.py
tests/: test_environment.py
